libavformat/rtpdec_g726.c
@@ -36,9 +36,15 @@ static av_cold int g726_ ## bitrate ##_init(AVFormatContext *s, int st_index, \
 } \
 \
 RTPDynamicProtocolHandler ff_g726_ ## bitrate ## _dynamic_handler = { \
-    .enc_name   = "G726-" #bitrate, \
+    .enc_name   = "AAL2-G726-" #bitrate, \
     .codec_type = AVMEDIA_TYPE_AUDIO, \
     .codec_id   = AV_CODEC_ID_ADPCM_G726, \
+    .init       = g726_ ## bitrate ## _init, \
+}; \
+RTPDynamicProtocolHandler ff_g726le_ ## bitrate ## _dynamic_handler = { \
+    .enc_name   = "G726-" #bitrate, \
+    .codec_type = AVMEDIA_TYPE_AUDIO, \
+    .codec_id   = AV_CODEC_ID_ADPCM_G726LE, \
     .init       = g726_ ## bitrate ## _init, \
 }
 
